--- a/scss/base/_animation.scss
+++ b/scss/base/_animation.scss
@@ -12,28 +12,7 @@
 //   Vars
 // --------------------------------
 
-$animations: (
-  blink: blink 1s timing(ease) infinite,
-  bounce: bounce 2s timing(ease) infinite,
-  fade-in: fade-in 0.5s timing(ease),
-  fade-out: fade-out 0.5s timing(ease),
-  float: float 3s timing(ease-in-out) infinite,
-  ping: ping 3s timing(ease-out) infinite,
-  pulse: pulse 2s timing(ease-out) infinite,
-  spin: spin 2s timing(linear) infinite,
-  scale-up: scale-up 0.5s timing(ease),
-  scale-down: scale-down 0.5s timing(ease),
-  slide-out-up: slide-out-up 0.5s timing(ease),
-  slide-out-down: slide-out-down 0.5s timing(ease),
-  slide-out-right: slide-out-right 0.5s timing(ease),
-  slide-out-left: slide-out-left 0.5s timing(ease),
-  slide-in-up: slide-in-up 0.5s timing(ease),
-  slide-in-down: slide-in-down 0.5s timing(ease),
-  slide-in-right: slide-in-right 0.5s timing(ease),
-  slide-in-left: slide-in-left 0.5s timing(ease),
-  shake-x: shake-x 0.75s timing(ease-out),
-  shake-y: shake-y 0.75s timing(ease-out),
-);
+$animations: theme(animations);
 
 // --------------------------------
 //   Mixins
