--- a/scss/tokens/_index.scss
+++ b/scss/tokens/_index.scss
@@ -2,13 +2,13 @@
 //   Tokens
 // --------------------------------
 
+@forward 'animation';
 @forward 'aspect';
 @forward 'blur';
 @forward 'border';
 @forward 'colors';
 @forward 'delay';
 @forward 'duration';
-@forward 'keyframes';
 @forward 'layer';
 @forward 'opacity';
 @forward 'screens';
