--- a/scss/utilities/_grid.scss
+++ b/scss/utilities/_grid.scss
@@ -13,4 +13,151 @@
 //   Utilities
 // --------------------------------
 
-$utilities: ();
+$utilities: (
+  grid-template-columns: (
+    responsive: true,
+    property: grid-template-columns,
+    class: grid-cols,
+    values: (
+      none: none,
+      1: repeat(1, minmax(0, 1fr)),
+      2: repeat(2, minmax(0, 1fr)),
+      3: repeat(3, minmax(0, 1fr)),
+      4: repeat(4, minmax(0, 1fr)),
+      5: repeat(5, minmax(0, 1fr)),
+      6: repeat(6, minmax(0, 1fr)),
+      7: repeat(7, minmax(0, 1fr)),
+      8: repeat(8, minmax(0, 1fr)),
+      9: repeat(9, minmax(0, 1fr)),
+      10: repeat(10, minmax(0, 1fr)),
+      11: repeat(11, minmax(0, 1fr)),
+      12: repeat(12, minmax(0, 1fr)),
+    ),
+  ),
+  grid-column: (
+    responsive: true,
+    property: grid-column,
+    class: col,
+    values: (
+      auto: auto,
+      span-1: span 1 / span 1,
+      span-2: span 2 / span 2,
+      span-3: span 3 / span 3,
+      span-4: span 4 / span 4,
+      span-5: span 5 / span 5,
+      span-6: span 6 / span 6,
+      span-7: span 7 / span 7,
+      span-8: span 8 / span 8,
+      span-9: span 9 / span 9,
+      span-10: span 10 / span 10,
+      span-11: span 11 / span 11,
+      span-12: span 12 / span 12,
+      span-full: span 1 / span -1,
+    ),
+  ),
+  grid-column-start: (
+    responsive: true,
+    property: grid-column-start,
+    class: col,
+    values: (
+      start-1: 1,
+      start-2: 2,
+      start-3: 3,
+      start-4: 4,
+      start-5: 5,
+      start-6: 6,
+      start-7: 7,
+      start-8: 8,
+      start-9: 9,
+      start-10: 10,
+      start-11: 11,
+      start-12: 12,
+      start-13: 13,
+      start-auto: auto,
+    ),
+  ),
+  grid-column-end: (
+    responsive: true,
+    property: grid-column-end,
+    class: col,
+    values: (
+      end-1: 1,
+      end-2: 2,
+      end-3: 3,
+      end-4: 4,
+      end-5: 5,
+      end-6: 6,
+      end-7: 7,
+      end-8: 8,
+      end-9: 9,
+      end-10: 10,
+      end-11: 11,
+      end-12: 12,
+      end-13: 13,
+      end-auto: auto,
+    ),
+  ),
+  grid-template-rows: (
+    responsive: true,
+    property: grid-template-rows,
+    class: grid-rows,
+    values: (
+      none: none,
+      1: repeat(1, minmax(0, 1fr)),
+      2: repeat(2, minmax(0, 1fr)),
+      3: repeat(3, minmax(0, 1fr)),
+      4: repeat(4, minmax(0, 1fr)),
+      5: repeat(5, minmax(0, 1fr)),
+      6: repeat(6, minmax(0, 1fr)),
+    ),
+  ),
+  grid-row: (
+    responsive: true,
+    property: grid-row,
+    class: row,
+    values: (
+      auto: auto,
+      span-1: span 1 / span 1,
+      span-2: span 2 / span 2,
+      span-3: span 3 / span 3,
+      span-4: span 4 / span 4,
+      span-5: span 5 / span 5,
+      span-6: span 6 / span 6,
+      span-7: span 7 / span 7,
+      span-8: span 8 / span 8,
+      span-9: span 9 / span 9,
+      span-10: span 10 / span 10,
+      span-11: span 11 / span 11,
+      span-12: span 12 / span 12,
+      span-full: span 1 / span -1,
+    ),
+  ),
+  grid-auto-flow: (
+    responsive: true,
+    property: grid-auto-flow,
+    class: grid-flow,
+    values: row col row-dense col-dense,
+  ),
+  grid-auto-columns: (
+    responsive: true,
+    property: grid-auto-columns,
+    class: auto-cols,
+    values: (
+      auto: auto,
+      min: min-content,
+      max: max-content,
+      fr: minmax(0, 1fr),
+    ),
+  ),
+  grid-auto-rows: (
+    responsive: true,
+    property: grid-auto-rows,
+    class: auto-rows,
+    values: (
+      auto: auto,
+      min: min-content,
+      max: max-content,
+      fr: minmax(0, 1fr),
+    ),
+  ),
+);
