--- a/scss/internal/_color.scss
+++ b/scss/internal/_color.scss
@@ -2,6 +2,7 @@
 //   Internal Color Helpers
 // --------------------------------
 
+@use 'sass:map';
 @use 'sass:list';
 @use 'sass:math';
 @use 'sass:meta';
@@ -9,6 +10,36 @@
 @use '../config/internal' as *;
 @use '../helpers' as *;
 @use 'output' as *;
+
+// --------------------------------
+//   Vars
+// --------------------------------
+
+$merged-colors: ();
+$_base-colors: ();
+$_scheme-colors: ();
+
+@each $color-name, $color in theme(colors) {
+  @if meta.type-of($color) == 'color' {
+    $_base-colors: map.set($_base-colors, #{$color-name}, fill($color-name, $color));
+  } @else {
+    @each $shade, $_value in $color {
+      $_base-colors: map.set($_base-colors, #{$color-name}-#{$shade}, fill($color-name, $shade));
+    }
+  }
+}
+
+@each $color-name, $color in theme(color-schemes, light) {
+  @if meta.type-of($color) == 'color' {
+    $_scheme-colors: map.set($_scheme-colors, #{$color-name}, fill($color-name, $color));
+  } @else {
+    @each $shade, $_value in $color {
+      $_scheme-colors: map.set($_scheme-colors, #{$color-name}-#{$shade}, fill($color-name, $shade));
+    }
+  }
+}
+
+$colors-map: map.merge($_base-colors, $_scheme_colors);
 
 // --------------------------------
 //   Functions
