--- a/scss/api/_shadow.scss
+++ b/scss/api/_shadow.scss
@@ -7,6 +7,10 @@
 @use '../config';
 @use 'theme' as *;
 
+// --------------------------------
+//   Vars
+// --------------------------------
+
 $_default-shadow: config.default(shadow);
 
 // --------------------------------
