--- a/scss/api/_spacing.scss
+++ b/scss/api/_spacing.scss
@@ -13,7 +13,7 @@
 @use 'theme' as *;
 
 // --------------------------------
-//   Values
+//   Support Vars
 // --------------------------------
 
 // Negative spacing (needed for negative margins)
