--- a/scss/api/_timing.scss
+++ b/scss/api/_timing.scss
@@ -5,6 +5,10 @@
 @use '../config';
 @use 'theme' as *;
 
+// --------------------------------
+//   Vars
+// --------------------------------
+
 $_default-timing: config.default(timing);
 
 // --------------------------------
