--- a/scss/api/_transition.scss
+++ b/scss/api/_transition.scss
@@ -10,7 +10,7 @@
 @use 'timing' as *;
 
 // --------------------------------
-//   Values
+//   Vars
 // --------------------------------
 
 $_default-duration: theme(duration, config.default(duration));
