--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -2,6 +2,8 @@
 //   Border Utilities
 // ------------------------------------------------
 
+@use 'sass:map';
+
 @use '../config';
 @use '../api' as *;
 
@@ -9,81 +11,81 @@
 //   Vars
 // --------------------------------
 
-// $radius: theme(radius);
+$_default-radius: map.get(config.$defaults, radius);
+$_default-border-width: map.get(config.$defaults, border-width);
 
-// $border-color-values: map.merge(
-//   (
-//     current: currentColor,
-//     inherit: inherit,
-//     transparent: transparent,
-//   ),
-//   support.$utility-border-colors-map
-// );
+$_radius: theme(radius);
+
+$_colors: map.merge(
+  $merged-colors,
+  (
+    current: currentColor,
+    inherit: inherit,
+    transparent: transparent,
+  )
+);
 
 // --------------------------------
 //   Utilities
 // --------------------------------
 
 $utilities: (
-  // rounded: (
-  //   property: border-radius,
-  //   class: rounded,
-  //   default: config(fallbacks, radius),
-  //   values: $radius,
-  // ),
-  // rounded-top: (
-  //   property: border-top-left-radius border-top-right-radius,
-  //   class: rounded-t,
-  //   values: $radius,
-  // ),
-  // rounded-right: (
-  //   property: border-top-right-radius border-bottom-right-radius,
-  //   class: rounded-r,
-  //   values: $radius,
-  // ),
-  // rounded-bottom: (
-  //   property: border-bottom-right-radius border-bottom-left-radius,
-  //   class: rounded-b,
-  //   values: $radius,
-  // ),
-  // rounded-left: (
-  //   property: border-bottom-left-radius border-top-left-radius,
-  //   class: rounded-l,
-  //   values: $radius,
-  // ),
-  // border-color: (
-  //   property: border-color,
-  //   class: border,
-  //   state: hover focus,
-  //   local-vars: (
-  //     'border-opacity': 1,
-  //   ),
-  //   values: $border-color-values,
-  // ),
-  // border-width: (
-  //   property: border-width,
-  //   class: border,
-  //   state: hover focus,
-  //   default: config(fallbacks, border-width),
-  //   values: (
-  //     0: 0px,
-  //     1: 1px,
-  //     2: 2px,
-  //     4: 4px,
-  //     8: 8px,
-  //   ),
-  // ),
-  // border-style: (
-  //   property: border-style,
-  //   class: border,
-  //   state: hover focus,
-  //   values: (
-  //     solid: solid,
-  //     dashed: dashed,
-  //     dotted: dotted,
-  //     double: double,
-  //     hidden: hidden,
-  //     none: none,
-  //   ),
-  // ),
+  rounded: (
+    property: border-radius,
+    class: rounded,
+    default: $_default-radius,
+    values: $_radius,
+  ),
+  rounded-top: (
+    property: border-top-left-radius border-top-right-radius,
+    class: rounded-t,
+    values: $_radius,
+  ),
+  rounded-right: (
+    property: border-top-right-radius border-bottom-right-radius,
+    class: rounded-r,
+    values: $_radius,
+  ),
+  rounded-bottom: (
+    property: border-bottom-right-radius border-bottom-left-radius,
+    class: rounded-b,
+    values: $_radius,
+  ),
+  rounded-left: (
+    property: border-bottom-left-radius border-top-left-radius,
+    class: rounded-l,
+    values: $_radius,
+  ),
+  border-width: (
+    property: border-width,
+    class: border,
+    pseudos: hover focus,
+    default: $_default-border-width,
+    values: (
+      0: 0px,
+      1: 1px,
+      2: 2px,
+      4: 4px,
+      8: 8px,
+    ),
+  ),
+  border-style: (
+    property: border-style,
+    class: border,
+    pseudos: hover focus,
+    values: (
+      solid: solid,
+      dashed: dashed,
+      dotted: dotted,
+      double: double,
+      hidden: hidden,
+      none: none,
+    ),
+  ),
+  border-color: (
+    property: border-color,
+    class: border,
+    pseudos: hover focus,
+    values: $_colors,
+  ),
 );
