--- a/scss/utilities/_effects.scss
+++ b/scss/utilities/_effects.scss
@@ -1,6 +1,6 @@
-// ------------------------------------------------
-//   Effects Utilities (Box Shadow, Opacity, ...)
-// ------------------------------------------------
+// --------------------------------
+//   Effects Utilities
+// --------------------------------
 
 @use '../config';
 @use '../api' as *;
