--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -177,6 +177,13 @@ $_type-base-index: list.index($_type-steps, 'md');
   }
 }
 
+// Truncate text overflow
+@mixin truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 // --------------------------------
 //   Generators
 // --------------------------------
