--- a/scss/api/_utility.scss
+++ b/scss/api/_utility.scss
@@ -11,6 +11,18 @@
 //   Mixins
 // --------------------------------
 
+// Create a single utility
+@mixin create-utility($class) {
+  /*! purgecss start ignore */
+  $class: str-escape($class);
+
+  // Create standard utility first
+  .#{$class} {
+    @content;
+  }
+  /*! purgecss end ignore */
+}
+
 // Create a single responsive utility
 @mixin create-responsive-utility($class) {
   /*! purgecss start ignore */
