--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -85,28 +85,11 @@ $utilities: (
   ),
 );
 
-@mixin utility-extensions {
-  @include create-responsive-utility(container) {
-    @include container(0px);
-  }
+// --------------------------------
+//   Utility Mixins
+// --------------------------------
 
-  // Centered content using grid place-content
-  @include create-responsive-utility(centered) {
-    display: grid;
-    place-content: center;
-  }
-
-  // Breakout from a container making the element full width
-  @include create-responsive-utility(breakout) {
-    width: 100vw;
-    max-width: 100vw;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-  }
-
+@mixin create-stack-utility {
   @each $key in $_spacers {
     $spacer-value: if(theme-has-key(spacing, $key), spacing($key), $key);
 
@@ -132,6 +115,33 @@ $utilities: (
   @include create-responsive-utility(space-y-reverse) {
     --koi-space-y-reverse: 1;
   }
+}
+
+// --------------------------------
+
+@mixin extensions {
+  @include create-responsive-utility(container) {
+    @include container(0px);
+  }
+
+  // Centered content using grid place-content
+  @include create-responsive-utility(centered) {
+    display: grid;
+    place-content: center;
+  }
+
+  // Breakout from a container making the element full width
+  @include create-responsive-utility(breakout) {
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+  }
+
+  @include create-stack-utility;
 
   @include create-responsive-utility(sr-only) {
     @include visually-hidden;
