--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,7 +2,7 @@
 @forward 'button' as button-*;
 @forward 'card' as card-*;
 @forward 'keyboard' as keyboard-*;
-@forward 'loader' as loader-*;
+@forward 'loader';
 @forward 'navbar' as navbar-*;
 
 @use 'badge';
