--- a/scss/api/_layout.scss
+++ b/scss/api/_layout.scss
@@ -130,8 +130,19 @@
   }
 }
 
-// Compose elements in a horizontal (row) or vertical (column) flex container
-@mixin stack($direction: row, $spacer: md, $justify: flex-start, $align: null, $reverse: false) {
+// Breakout from a container making the element full width
+@mixin breakout {
+  left: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
+  position: relative;
+  right: 50%;
+  width: 100vw;
+}
+
+// Space elements in a horizontal (row) or vertical (column) flex container
+@mixin spacer($direction: row, $spacer: md, $justify: flex-start, $align: null, $reverse: false) {
   $direction: if($reverse, #{$direction}-reverse, $direction);
   $spacer: if(theme-has-key(spacing, $spacer), spacing($spacer), $spacer);
 
@@ -177,6 +188,34 @@
         margin-top: var(--koi-spacer, $spacer);
       }
     }
+  }
+}
+
+// Stack elements on top of each other
+@mixin stack {
+  align-items: flex-end;
+  display: inline-grid;
+  place-items: center;
+
+  * {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    opacity: 0.6;
+    transform: translateY(1rem) scale(0.9);
+    width: 100%;
+    z-index: 1;
+  }
+
+  *:nth-child(1) {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+    z-index: 3;
+  }
+
+  *:nth-child(2) {
+    opacity: 0.8;
+    transform: translateY(0.5rem) scale(0.95);
+    z-index: 2;
   }
 }
 
