--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -9,7 +9,7 @@
 //   Mixins
 // --------------------------------
 
-@mixin loader-1($size: 48px, $color: #fff, $thickness: 4px, $duration: 0.5s) {
+@mixin loader-1($size: 48px, $color: fill(surface, 1), $thickness: 4px, $duration: 0.5s) {
   animation: loader-1-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-bottom-color: transparent;
@@ -29,7 +29,7 @@
   }
 }
 
-@mixin loader-2($size: 48px, $color: #fff, $accent: accent(6), $thickness: 4px, $duration: 1s) {
+@mixin loader-2($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 4px, $duration: 1s) {
   animation: loader-2-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-bottom-color: $accent;
@@ -50,7 +50,7 @@
   }
 }
 
-@mixin loader-3($size: 48px, $color: #fff, $accent: accent(6), $thickness: 4px, $duration: 1s) {
+@mixin loader-3($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 4px, $duration: 1s) {
   animation: loader-3-rotate $duration linear infinite;
   border-radius: 50%;
   height: $size;
@@ -99,7 +99,7 @@
   }
 }
 
-@mixin loader-4($size: 48px, $color: #fff, $accent: accent(6), $thickness: 3px, $duration: 1s) {
+@mixin loader-4($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 3px, $duration: 1s) {
   animation: loader-4-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-radius: 50%;
@@ -134,7 +134,7 @@
   }
 }
 
-@mixin loader-5($size: 48px, $color: #fff, $accent: accent(6), $thickness: 3px, $duration: 1s) {
+@mixin loader-5($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 3px, $duration: 1s) {
   animation: loader-5-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-radius: 50%;
@@ -169,7 +169,7 @@
   }
 }
 
-@mixin loader-6($size: 48px, $color: #fff, $accent: accent(6), $thickness: 3px, $duration: 1s) {
+@mixin loader-6($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 3px, $duration: 1s) {
   animation: loader-6-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-radius: 50%;
@@ -204,7 +204,7 @@
   }
 }
 
-@mixin loader-7($size: 48px, $color: #fff, $accent: accent(6), $thickness: 3px, $duration: 1s) {
+@mixin loader-7($size: 48px, $color: fill(surface, 1), $accent: accent(6), $thickness: 3px, $duration: 1s) {
   animation: loader-7-rotate $duration linear infinite;
   border: $thickness solid $color;
   border-radius: 50%;
@@ -239,7 +239,7 @@
   }
 }
 
-@mixin loader-8($size: 48px, $color: #fff, $thickness: 2px, $duration: 2s) {
+@mixin loader-8($size: 48px, $color: fill(surface, 1), $thickness: 2px, $duration: 2s) {
   display: inline-block;
   height: $size;
   position: relative;
@@ -276,7 +276,7 @@
   }
 }
 
-@mixin loader-9($color: #fff, $size: 10px, $amplitude: 6px, $duration: 1s) {
+@mixin loader-9($color: fill(surface, 1), $size: 10px, $amplitude: 6px, $duration: 1s) {
   animation: loader-9-anim $duration linear infinite alternate;
   border-radius: 50%;
   box-sizing: border-box;
