--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,3 +1,10 @@
 // --------------------------------
 //   Navbar
 // --------------------------------
+
+// --------------------------------
+//   Styles
+// --------------------------------
+
+// @mixin styles {
+// }
