--- a/scss/internal/_generators.scss
+++ b/scss/internal/_generators.scss
@@ -18,8 +18,8 @@
 //   Vars
 // --------------------------------
 
-$ignore-accent-colors: (white black surface text border);
-$default-accent: config.default(color-accent);
+$_ignore-accent-colors: (white black surface text border);
+$_default-accent: config.default(color-accent);
 
 // --------------------------------
 //   CSS Custom Props
@@ -42,14 +42,14 @@ $default-accent: config.default(color-accent);
   /*! purgecss start ignore */
 
   // Default accent
-  $default-accent-map: map.get($colors-map, $default-accent);
+  $default-accent-map: map.get($colors-map, $_default-accent);
   @include color-custom-prop($color-prefix, accent, $default-accent-map, $suffix);
 
   @each $color-name, $value in $colors-map {
     @include color-custom-prop($property, $color-name, $value, $suffix);
 
     // Accent colors utility classes
-    @if not list.index($ignore-accent-colors, $color-name) {
+    @if not list.index($_ignore-accent-colors, $color-name) {
       .accent-#{'' + $color-name} {
         @include color-custom-prop($color-prefix, accent, $value, $suffix);
       }
@@ -68,7 +68,7 @@ $_standard-pseudo-utils: ();
 $_responsive-class-utils: ();
 $_responsive-pseudo-utils: ();
 
-// TODO: Default value generation
+// TODO: Default value generation (i.e., rounded = rounded-md)
 @mixin _create-utility-maps($utilities) {
   $util-glue: config.$utility-glue;
   $prefix: config.$prefix;
